fix: svg align center with clean search

--- a/web/src/components/Overview/Header/index.scss
+++ b/web/src/components/Overview/Header/index.scss
@@ -21,6 +21,27 @@
     background-color: #939ea0 !important;
     color: #fff;
   }
+
+  .centeredSearchInput {
+    :global(.ant-input-affix-wrapper) {
+      display: flex;
+      align-items: center;
+    }
+
+    :global(.ant-input-suffix) {
+      height: 100%;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    :global(.ant-input-clear-icon) {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      line-height: 1;
+    }
+  }
 }
 
 .suggest-item {
